kubernetes/apps/database/crunchy-postgres/pgadmin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  type: ClusterIP
  ports:
  - name: pgadmin-port
    port: 5050
    protocol: TCP
  selector:
    postgres-operator.crunchydata.com/pgadmin: pgadmin
