kubernetes/apps/database/crunchy-postgres/pgadmin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: pgAdmin
    gethomepage.dev/description: PostgreSQL management tool
    gethomepage.dev/group: Management
    gethomepage.dev/icon: sh-pgadmin.svg
    gethomepage.dev/pod-selector: >-
      app in (
        pgadmin
      )
spec:
  hostnames:
    - pgadmin.musai.ovh
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: pgadmin
          namespace: database
          port: 5050
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
